--- a/jupyter/work/nudge reinforcement learning/analytics_table.ipynb
+++ b/jupyter/work/nudge reinforcement learning/analytics_table.ipynb
@@ -59,7 +59,7 @@
     "# Fetch data from the table\n",
     "response = supabase.table(\"user_recommendations\").select(\"*\").execute()\n",
     "data = response  \n",
-    "print(data)\n"
+    "print(data)"
    ]
   },
   {
